# Wallery

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json
.gitee/workflows/: build.yml
.github/workflows/: build.yml
.workflow/: build.yml
docs/: .trigger  index.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  config.rs  favorites.rs  lib.rs  main.rs  scheduler.rs  wallpaper_manager.rs
src-tauri/src/commands/: favorites_cmds.rs  mod.rs  settings_cmds.rs  source_cmds.rs  update_cmds.rs  wallpaper_cmds.rs
src-tauri/src/sources/: bing.rs  mod.rs  nasa.rs  pexels.rs  unsplash.rs  wallhaven.rs
src/lib/i18n/: en.json  index.ts  zh.json
src/lib/stores/: settings.ts
src/pages/: About.svelte  Categories.svelte  Schedule.svelte  Sources.svelte
