[package]
name = "wallery"
version = "1.0.0"
description = "Wallery 幕间 — A beautiful wallpaper app"
authors = ["Wallery Team"]
edition = "2021"

[lib]
name = "wallery_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
wallpaper = "3"
log = "0.4"
env_logger = "0.11"
dirs = "6"
async-trait = "0.1"
open = "5"
